Updated file structure

--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,9 @@
+@import "reset";
+@import "global";
+
+@import "variables";
+@import "mixins";
+
 @import "nav";
+@import "landing-page";
+@import "about-page";
