Added content/styling to the front landing page. Starting trying to add a font

--- a/less/header.less
+++ b/less/header.less
@@ -1,13 +1,17 @@
-header{
-    margin-top: 100px;
-    background-color: rgba(220,220,220, 0.4);
-    text-align:center;
-    nav{
-        a{
-        text-decoration: none;
-        color: @text-color-1;
-        font-size: 3rem;
-        }
+.bg{
+text-align: center;
+.container{
+    border: 5px solid @content-bg-color;
+    border-radius: 100px;
+    margin: 135px 0 200px 0;
+    display: inline-block;
+    text-align: center;
+    header{
+        margin: 10px;
+        background-color: @content-bg-color;
+        text-align:center;
+        border-radius: 100px;
+        padding: 22px 60px;
     }
-
+}
 }
