--- a/css/index.css
+++ b/css/index.css
@@ -142,17 +142,54 @@ body {
 }
 h1 {
   font-size: 8rem;
+  font-style: 'passportregular';
 }
-a {
-  text-decoration: none;
+nav {
+  background-color: rgba(220, 220, 220, 0.3);
+  padding: 13px 0;
+  display: flex;
+  justify-content: space-evenly;
 }
-header {
-  margin-top: 100px;
-  background-color: rgba(220, 220, 220, 0.4);
-  text-align: center;
-}
-header nav a {
+nav a {
   text-decoration: none;
   color: black;
   font-size: 3rem;
+}
+.bg {
+  text-align: center;
+}
+.bg .container {
+  border: 5px solid rgba(220, 220, 220, 0.3);
+  border-radius: 100px;
+  margin: 135px 0 200px 0;
+  display: inline-block;
+  text-align: center;
+}
+.bg .container header {
+  margin: 10px;
+  background-color: rgba(220, 220, 220, 0.3);
+  text-align: center;
+  border-radius: 100px;
+  padding: 22px 60px;
+}
+.buttons-container {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  margin-bottom: 290px;
+}
+.buttons-container .button-holder {
+  border: 4px solid rgba(220, 220, 220, 0.3);
+  border-radius: 100px;
+}
+.buttons-container .button-holder button {
+  border: none;
+  width: 300px;
+  margin: 6px;
+  background-color: rgba(220, 220, 220, 0.3);
+  border-radius: 100px;
+  padding: 12px 40px;
+  font-size: 5rem;
 }
