--- a/less/global.less
+++ b/less/global.less
@@ -15,10 +15,18 @@ html, body{
 
 h1 {
     font-size: 8rem;
-   // font-style: 'Passport';
+    font-style: 'passportregular';
 }
 
-a {
+nav{
+    background-color: @content-bg-color;
+    padding: 13px 0;
+    display: flex;
+    justify-content: space-evenly;
+    a{
     text-decoration: none;
+    color: @text-color-1;
+    font-size: 3rem;
+    }
 }
 
