Finished adding new font. Started about page.

--- a/less/global.less
+++ b/less/global.less
@@ -1,6 +1,7 @@
 html, body{
     height: 100%;
     font-size: 62.5%;
+    font-family: 'passportregular';
 }
 
 .bg {
@@ -15,7 +16,7 @@ html, body{
 
 h1 {
     font-size: 8rem;
-    font-style: 'passportregular';
+
 }
 
 nav{
@@ -30,3 +31,6 @@ nav{
     }
 }
 
+button{
+    font-family: 'passportregular';
+}
