--- a/css/index.css
+++ b/css/index.css
@@ -130,6 +130,7 @@ html,
 body {
   height: 100%;
   font-size: 62.5%;
+  font-family: 'passportregular';
 }
 .bg {
   background-image: url(../images/restaurant-2.jpeg);
@@ -142,7 +143,6 @@ body {
 }
 h1 {
   font-size: 8rem;
-  font-style: 'passportregular';
 }
 nav {
   background-color: rgba(220, 220, 220, 0.3);
@@ -154,6 +154,9 @@ nav a {
   text-decoration: none;
   color: black;
   font-size: 3rem;
+}
+button {
+  font-family: 'passportregular';
 }
 .bg {
   text-align: center;
