Created layout for about page

--- a/less/header.less
+++ b/less/header.less
@@ -3,7 +3,7 @@ text-align: center;
 .container{
     border: 5px solid @content-bg-color;
     border-radius: 100px;
-    margin: 135px 0 200px 0;
+    margin: 135px 0 0 0;
     display: inline-block;
     text-align: center;
     header{
