--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,6 @@ body {
   font-family: 'passportregular';
 }
 .bg {
-  background-image: url(../images/restaurant-2.jpeg);
   background-color: grey;
   height: 100%;
   width: auto;
@@ -146,7 +145,7 @@ h1 {
 }
 nav {
   background-color: rgba(220, 220, 220, 0.3);
-  padding: 13px 0;
+  padding: 10px 0;
   display: flex;
   justify-content: space-evenly;
 }
@@ -164,7 +163,7 @@ button {
 .bg .container {
   border: 5px solid rgba(220, 220, 220, 0.3);
   border-radius: 100px;
-  margin: 135px 0 200px 0;
+  margin: 135px 0 0 0;
   display: inline-block;
   text-align: center;
 }
@@ -181,6 +180,7 @@ button {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-evenly;
+  margin-top: 200px;
   margin-bottom: 290px;
 }
 .buttons-container .button-holder {
@@ -195,4 +195,46 @@ button {
   border-radius: 100px;
   padding: 12px 40px;
   font-size: 5rem;
+}
+.about-container {
+  width: 75%;
+  margin: 0 auto;
+}
+.about-container .container {
+  margin: 60px 0 30px 0;
+}
+.person {
+  height: 250px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.person .about-text {
+  width: 45%;
+}
+.person .about-text h2 {
+  font-size: 2.2rem;
+  text-align: center;
+  padding-bottom: 20px;
+  font-weight: 600;
+}
+.person .about-text p {
+  font-size: 2rem;
+  text-align: justify;
+}
+.person .img-container {
+  width: 45%;
+  display: flex;
+  justify-content: center;
+}
+.person .img-container img {
+  height: 100%;
+}
+hr {
+  border: 3px solid rgba(220, 220, 220, 0.3);
+  border-radius: 100px;
+  margin: 30px 0;
+}
+#end-page-nav {
+  margin-top: 30px;
 }
