--- a/less/global.less
+++ b/less/global.less
@@ -5,7 +5,7 @@ html, body{
 }
 
 .bg {
-    background-image: url(../images/restaurant-2.jpeg);
+   // background-image: url(../images/restaurant-2.jpeg);
     background-color: grey;
     height: 100%;
     width: auto;
@@ -21,7 +21,7 @@ h1 {
 
 nav{
     background-color: @content-bg-color;
-    padding: 13px 0;
+    padding: 10px 0;
     display: flex;
     justify-content: space-evenly;
     a{
