--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -4,6 +4,7 @@
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-evenly;
+ margin-top: 200px;
  margin-bottom: 290px;
     .button-holder{
         border: 4px solid @content-bg-color;
