--- a/less/global.less
+++ b/less/global.less
@@ -5,22 +5,14 @@ html, body{
 }
 
 .bg {
-   // background-image: url(../images/restaurant-2.jpeg);
-    background-color: grey;
-    height: 100%;
-    width: auto;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-color: #311D3F;
 }
 
 h1 {
     font-size: 8rem;
-
 }
 
 nav{
-    background-color: @content-bg-color;
     padding: 10px 0;
     display: flex;
     justify-content: space-evenly;
