--- a/less/header.less
+++ b/less/header.less
@@ -1,14 +1,26 @@
 .bg{
 text-align: center;
-.container{
+.container-landing {
     border: 5px solid @content-bg-color;
     border-radius: 100px;
-    margin: 135px 0 0 0;
     display: inline-block;
     text-align: center;
     header{
         margin: 10px;
         background-color: @content-bg-color;
+        text-align:center;
+        border-radius: 100px;
+        padding: 22px 60px;
+    }
+}
+.container-about {
+    border: 5px solid @about-content-bg-color;
+    border-radius: 100px;
+    display: inline-block;
+    text-align: center;
+    header{
+        margin: 10px;
+        background-color: @about-content-bg-color;
         text-align:center;
         border-radius: 100px;
         padding: 22px 60px;
