--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -1,11 +1,34 @@
+.landing-page-body{
+
+    background-image: url(../images/restaurant-2.jpeg);
+    width: auto;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+    height: 100vh;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    .flex-container{
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 75%;
+        .container{
+            margin: 0;
+        }
+    }
+
+}
+
 .buttons-container{
  width: 80%;
  margin: 0 auto;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-evenly;
- margin-top: 200px;
- margin-bottom: 290px;
     .button-holder{
         border: 4px solid @content-bg-color;
         border-radius: 100px;
@@ -19,4 +42,8 @@
             font-size: 5rem;
         }
     }
+}
+
+.landing-nav{
+    background: @content-bg-color;
 }
