--- a/less/variables.less
+++ b/less/variables.less
@@ -1,2 +1,3 @@
 @text-color-1: black;
-@content-bg-color: rgba(220,220,220, 0.3);
+@content-bg-color: rgba(220,220,220, 0.6);
+@about-content-bg-color: #88304E;
