--- a/less/global.less
+++ b/less/global.less
@@ -12,15 +12,26 @@ h1 {
     font-size: 8rem;
 }
 
-nav{
+.about-nav{
     padding: 10px 0;
     display: flex;
-    justify-content: space-evenly;
-    a{
-    text-decoration: none;
-    color: @text-color-1;
-    font-size: 3rem;
+    justify-content: space-between;
+    .title{
+        color: white;
+        font-size: 3.2rem;
+        padding-left: 10px;
     }
+    .links{
+        padding-right: 10px;
+        display: flex;
+        justify-content: space-evenly;
+     a{
+        text-decoration: none;
+        color: white;
+        font-size: 3rem;
+    }
+    }
+   
 }
 
 button{
