--- a/less/variables.less
+++ b/less/variables.less
@@ -2,3 +2,6 @@
 @text-color-2: white;
 @content-bg-color: rgba(220,220,220, 0.6);
 @about-content-bg-color: #88304E;
+
+@mobile: ~"(max-width:500px)";
+@tablet: ~"(max-width: 800px)";
