--- a/less/about-page.less
+++ b/less/about-page.less
@@ -2,6 +2,9 @@
     width: 75%;
     margin: 0 auto;
     color: @text-color-2;
+    @media @tablet{
+        width: 90%;
+    }
     .container-about{
         margin: 60px 0 30px 0;
     }
@@ -13,20 +16,31 @@
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
+
+    @media @tablet{
+        flex-direction: column;
+    }
     .title{
         color: @text-color-2;
-        font-size: 3.2rem;
+        font-size: 2rem;
         padding-left: 10px;
+        @media @tablet{
+            padding-bottom: 20px;
+        }
     }
     .links{
-        padding-right: 100px;
+        //padding-right: 100px;
         display: flex;
         justify-content: space-evenly;
      a{
         text-decoration: none;
         color: @text-color-2;
-        font-size: 3rem;
+        font-size: 2rem;
         padding: 0 30px;
+        @media @tablet{
+            font-size: 1.5rem;
+            padding: 0 15px;
+        }
     }
     }
    
@@ -38,40 +52,75 @@
     padding: 25px 0;
     border-radius: 20px;
 
-    height: 250px;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-evenly;
+    @media @mobile{
+        flex-direction: column;
+        align-items: center; 
+    }
     .about-text{
         width: 45%;
+        @media @mobile{
+            width: 95%;
+            padding: 10px;
+        }
 
         h2{
-            font-size: 2.2rem;
+            font-size: 2rem;
             text-align: center;
             padding-bottom: 20px;
             font-weight: 600;
+            @media @tablet{
+                font-size: 1.8rem;
+            }
         }
         p{
-            font-size: 2rem;
+            font-size: 1.8rem;
             text-align: justify;
+            @media @tablet{
+                font-size: 1.5rem;
+            }
         }
     }
     .img-container-a{
         width: 45%;
         display: flex;
         justify-content: flex-end;
+        @media @mobile{
+            justify-content: center;
+        }
         img{
-            height: 100%;
+            height: 250px;
+            @media @tablet{
+                height: 200px;
+            }
+            @media @mobile{
+                height: 80vw;
+            }
         }
     }
     .img-container-b{
         width: 45%;
         display: flex;
         justify-content: flex-start;
+        @media @mobile{
+            justify-content: center;
+        }
         img{
-            height: 100%;
+            height: 250px;
+            @media @tablet{
+                height: 200px;
+            }
+            @media @mobile{
+                height: 80vw;
+            }
         }
     }
+}
+
+.odd{
+    flex-direction: column-reverse;
 }
 
 hr{
@@ -83,5 +132,9 @@ hr{
 
 
 #end-page-nav{
+    .title{
+        display: none;
+    }
     margin-top: 60px;
+    justify-content: center;
 }
