--- a/less/description-page.less
+++ b/less/description-page.less
@@ -7,5 +7,11 @@
         font-size: 2.2rem;
         color: @text-color-2;
         text-align: justify;
+        @media @tablet{
+            font-size: 2rem;
+        }
+        @media @mobile{
+            font-size: 1.8rem;
+        }
     }
 }
