--- a/less/global.less
+++ b/less/global.less
@@ -2,6 +2,7 @@ html, body{
     height: 100%;
     font-size: 62.5%;
     font-family: 'passportregular';
+    box-sizing: border-box;
 }
 
 .bg {
@@ -9,30 +10,13 @@ html, body{
 }
 
 h1 {
-    font-size: 8rem;
+    font-size: 5rem;
+    @media @tablet{
+        font-size: 4rem;
+    }
 }
 
-.about-nav{
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    .title{
-        color: white;
-        font-size: 3.2rem;
-        padding-left: 10px;
-    }
-    .links{
-        padding-right: 10px;
-        display: flex;
-        justify-content: space-evenly;
-     a{
-        text-decoration: none;
-        color: white;
-        font-size: 3rem;
-    }
-    }
-   
-}
+
 
 button{
     font-family: 'passportregular';
