--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -29,24 +29,30 @@
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-evenly;
-    .button-holder{
-        border: 4px solid @content-bg-color;
-        border-radius: 100px;
-        button{
-            border: none;
-            width: 300px;
-            margin: 6px;
-            background-color: @content-bg-color;
-            border-radius: 100px;
-            padding: 12px 40px;
-            a{
-               font-size: 5rem; 
-               text-decoration: none;
-               color: @text-color-1;
-            }
-            
-        }
+    
+    @media @tablet{
+        width: 90%;
     }
+    @media @mobile{
+        flex-direction: column;
+        align-items: center;
+    }
+            
+    a{
+        border-radius: 100px;
+        border: none;
+        width: 130px;
+        margin: 6px;
+        background-color: @content-bg-color;
+        border-radius: 100px;
+        padding: 12px 40px;
+        font-size: 3rem; 
+        text-decoration: none;
+        color: @text-color-1;
+    }
+    
+        
+    
 }
 
 
@@ -56,21 +62,34 @@
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
+    @media @mobile{
+        justify-content: center;
+    }
     .title{
         color: @text-color-1;
-        font-size: 3.2rem;
+        font-size: 2rem;
         padding-left: 10px;
+        @media @tablet{
+            font-size: 1.5rem;
+        }
+        @media @mobile{
+            display: none;  
+        }
     }
     .links{
-        padding-right: 100px;
+        //padding-right: 100px;
         display: flex;
         justify-content: space-evenly;
-     a{
-        text-decoration: none;
-        color: @text-color-1;
-        font-size: 3rem;
-        padding: 0 30px;
-    }
+        a{
+            text-decoration: none;
+            color: @text-color-1;
+            font-size: 2rem;
+            padding: 0 30px;
+            @media @tablet{
+                font-size: 1.5rem;
+                padding: 0 15px;
+            }
+        }
     }
    
 }
