--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 @text-color-1: black;
 @text-color-2: white;
 @content-bg-color: rgba(220,220,220, 0.6);
-@about-content-bg-color: #88304E;
+@about-content-bg-color: rgba(136, 48, 78, 1);
 
 @mobile: ~"(max-width:500px)";
 @tablet: ~"(max-width: 800px)";
