--- a/less/animations.less
+++ b/less/animations.less
@@ -27,3 +27,11 @@
     from{background: #311D3F;}
     to{background: none;}
 }
+
+@keyframes image-animation{ 
+    0% { opacity: 0; animation-timing-function: ease-in; }
+    8% { opacity: 1; animation-timing-function: ease-out; }
+    17% { opacity: 1 }
+    25% { opacity: 0 }
+    100% { opacity: 0 }
+}
