--- a/less/landing-page.less
+++ b/less/landing-page.less
@@ -1,10 +1,67 @@
 .landing-page-body{
 
+.cb-slideshow,
+.cb-slideshow:after { 
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: -1; 
+}
+.cb-slideshow:after { 
+    content: '';
+    background: transparent; 
+}
+
+
+.cb-slideshow li span { 
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    color: transparent;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    opacity: 0;
+    z-index: 0;
+    animation: image-animation 36s linear infinite 0s; 
+}
+
+.cb-slideshow li:nth-child(1) span { 
+    background-image: url(../images/restaurant-1.jpeg); 
+}
+.cb-slideshow li:nth-child(2) span { 
     background-image: url(../images/restaurant-2.jpeg);
-    width: auto;
-    background-position: center top;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    animation-delay: 6s; 
+}
+.cb-slideshow li:nth-child(3) span { 
+    background-image: url(../images/3.jpg);
+    animation-delay: 12s; 
+}
+.cb-slideshow li:nth-child(4) span { 
+    background-image: url(../images/4.jpg);
+    animation-delay: 18s; 
+}
+.cb-slideshow li:nth-child(5) span { 
+    background-image: url(../images/5.jpg); 
+    animation-delay: 24s;
+}
+.cb-slideshow li:nth-child(6) span { 
+    background-image: url(../images/6.jpg);
+    animation-delay: 30s; 
+}
+
+
+    //background-image: url(../images/restaurant-2.jpeg);
+    //width: auto;
+    //background-position: center top;
+   // background-repeat: no-repeat;
+   // background-size: 100% 100%;
+.content-container{
+    z-index: 1;
 
     height: 100vh;
     display: flex;
@@ -86,5 +143,5 @@
             padding-right: 0px;
         }
     }
-   
+}
 }
